[package]
name = "crust"
version = "0.1.0"
authors = ["Richard <mokua83ke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.19.1"
libc = "0.2.80"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
seccomp-sys = "0.1.3"
caps = "0.5.0"
##cargo-readme = "1.0.0"